--- a/src/main/resources/templates/admin/challenge.html
+++ b/src/main/resources/templates/admin/challenge.html
@@ -53,6 +53,7 @@
                     <th>상태</th>
                     <th>시작일</th>
                     <th>종료일</th>
+                    <th>회원 ID</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,6 +66,7 @@
                     <td th:text="${challenge.status}"></td>
                     <td th:text="${challenge.startDate}"></td>
                     <td th:text="${challenge.endDate}"></td>
+                    <td th:text="${challenge.memberId}"></td>
                 </tr>
             </tbody>
         </table>
