feat: 관리자 신고 리스트와 삭제 기능 추가 검색 기능 추가 예정

--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -23,6 +23,10 @@
 
         <button type="button"
                 class="btn btn-secondary btn-lg">친구 관리</button>
+
+        <button type="button"
+                th:onclick="|location.href='@{/admin/report}'|"
+                class="btn btn-secondary btn-lg">신고 관리</button>
     </div>
 </div>
 </body>
