--- a/src/main/resources/templates/admin/challenge.html
+++ b/src/main/resources/templates/admin/challenge.html
@@ -13,6 +13,15 @@
     <form th:action="@{challenge/search}" th:object="${roomSearch}" method="post">
         <div class="row g-3 align-items-center justify-content-center">
             <div class="col-auto">
+                <label for="type">타입:</label>
+            </div>
+            <div class="col-auto">
+                <select class="form-control form-select" id="type" name="type">
+                    <option value="SINGLE">개인</option>
+                    <option value="GROUP">그룹</option>
+                </select>
+            </div>
+            <div class="col-auto">
                 <label for="status">상태:</label>
             </div>
             <div class="col-auto">
