feat: 관리자 페이지 로그인 기능 추가 클라이언트와 api 통신이 아닌 타임리프 템플릿과 데이터를 통신해야 하기에  JWT 토큰을 쿠키에 넣는 방식으로 진행 중 보안상 신경쓸 것이 많이 세션 방식으로 변경하는 것이 좋아보임

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -10,20 +10,22 @@
     <div class="py-5 text-center">
         <h2>관리자 페이지</h2>
     </div>
-    <form action="#" method="post">
+    <form th:action="@{/admin/login}" th:object="${loginRequestDto}"  method="post">
         <div class="row g-3 align-items-center justify-content-center">
             <div class="col-auto">
-                <label class="form-label" for="username">아이디</label>
+                <label class="form-label" for="id">아이디</label>
             </div>
             <div class="col-auto">
-                <input class="form-control" type="text" id="username" name="username">
+                <input class="form-control" type="text" id=id name="id"
+                       th:value="${loginRequestDto.id}">
             </div>
 
             <div class="col-auto">
-                <label class="form-label" for="password">비밀번호</label>
+                <label class="form-label" for="pw">비밀번호</label>
             </div>
             <div class="col-auto">
-                <input class="form-control" type="password" id="password" name="password">
+                <input class="form-control" type="password" id="pw" name="pw"
+                       th:value="${loginRequestDto.id}">
             </div>
 
             <div class="col-auto">
