feat: 관리자 로그인 기능 현재 서비스와 컨트롤러의 기능은 동작하지만 보안 설정 필요함. admin 권한이 있는 사용자만 admin 페이지에 접근 가능하게 설정되어 있어 로그인 기능 추가가 필요. 템플릿 엔진에서는 JWT 방식을 사용하는 것이 적절하지 못하여 session 인증 방식을 사용하려고 시도했으나 보안 설정에서 막힘. 보안 설정 수정 예정.

--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -10,7 +10,8 @@
     <div class="py-5 text-center">
         <h2>관리자 페이지</h2>
     </div>
-    <form th:action="@{/admin/login}" th:object="${loginRequestDto}"  method="post">
+    <form th:action th:object="${loginRequestDto}"  method="post">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         <div class="row g-3 align-items-center justify-content-center">
             <div class="col-auto">
                 <label class="form-label" for="id">아이디</label>
